# serializer version: 1
# name: ListEmployeeRecordsTest.test_employee_record_to_disable
  '''
  <div class="c-box--results__footer">
                  <div class="d-flex flex-column flex-md-row justify-content-md-end gap-3">
                      
                          <a aria-label="Désactiver la fiche salarié de John DOE" class="btn btn-outline-primary btn-block w-100 w-md-auto" href="/employee_record/disable/[PK of EmployeeRecord]">Désactiver</a>
                      
                      <a aria-label="Compléter la fiche salarié de John DOE" class="btn btn-primary btn-block w-100 w-md-auto" href="/employee_record/create/[PK of JobApplication]?from_status=NEW">Compléter</a>
                  </div>
              </div>
  '''
# ---
# name: ListEmployeeRecordsTest.test_employee_record_to_disable_with_nir_associated_to_other[action]
  '''
  <div class="c-box--results__footer">
                  <a aria-label="Régulariser le n° de sécurité sociale John DOE (ouverture dans un nouvel onglet)" class="btn btn-primary btn-block w-100 w-md-auto has-external-link" href="https://tally.so/r/wzxQlg?employeerecord=[PK of EmployeeRecord]" rel="noopener" target="_blank">Régulariser le n° de sécurité sociale</a>
              </div>
  '''
# ---
# name: ListEmployeeRecordsTest.test_employee_record_to_disable_with_nir_associated_to_other[alert]
  '''
  <div class="alert alert-warning">
              <div class="row">
                  <div class="col-auto pe-0">
                      <i class="ri-error-warning-line ri-xl text-danger"></i>
                  </div>
                  <div class="col">
                      <p class="mb-0">
                          <strong>Une action de votre part est nécessaire</strong>
                      </p>
                      <p class="mb-0">
                          Attention, nous avons détecté une ou plusieurs fiches salarié qui nécessitent une régularisation manuelle de votre part.
                      </p>
                  </div>
              </div>
          </div>
  '''
# ---
# name: ListEmployeeRecordsTest.test_employee_records_with_a_prolongation_need_to_be_updated[action]
  '''
  <div class="c-box--results__footer">
                  <a aria-label="Mettre à jour la fiche salarié de John DOE" class="btn btn-primary btn-block w-100 w-md-auto" href="/employee_record/create/[PK of JobApplication]">Mettre à jour</a>
              </div>
  '''
# ---
# name: ListEmployeeRecordsTest.test_employee_records_with_a_prolongation_need_to_be_updated[alert]
  '''
  <div class="alert alert-warning">
              <div class="row">
                  <div class="col-auto pe-0">
                      <i class="ri-error-warning-line ri-xl text-danger"></i>
                  </div>
                  <div class="col">
                      <p class="mb-0">
                          <strong>Une action de votre part est nécessaire</strong>
                      </p>
                      <p class="mb-0">
                          Attention, nous avons détecté une ou plusieurs fiches salarié qui nécessitent une régularisation manuelle de votre part.
                      </p>
                  </div>
              </div>
          </div>
  '''
# ---
# name: ListEmployeeRecordsTest.test_employee_records_with_a_suspension_need_to_be_updated[action]
  '''
  <div class="c-box--results__footer">
                  <a aria-label="Mettre à jour la fiche salarié de John DOE" class="btn btn-primary btn-block w-100 w-md-auto" href="/employee_record/create/[PK of JobApplication]">Mettre à jour</a>
              </div>
  '''
# ---
# name: ListEmployeeRecordsTest.test_employee_records_with_a_suspension_need_to_be_updated[alert]
  '''
  <div class="alert alert-warning">
              <div class="row">
                  <div class="col-auto pe-0">
                      <i class="ri-error-warning-line ri-xl text-danger"></i>
                  </div>
                  <div class="col">
                      <p class="mb-0">
                          <strong>Une action de votre part est nécessaire</strong>
                      </p>
                      <p class="mb-0">
                          Attention, nous avons détecté une ou plusieurs fiches salarié qui nécessitent une régularisation manuelle de votre part.
                      </p>
                  </div>
              </div>
          </div>
  '''
# ---
# name: ListEmployeeRecordsTest.test_employee_records_with_nir_associated_to_other[action]
  '''
  <div class="c-box--results__footer">
                  <a aria-label="Régulariser le n° de sécurité sociale John DOE (ouverture dans un nouvel onglet)" class="btn btn-primary btn-block w-100 w-md-auto has-external-link" href="https://tally.so/r/wzxQlg?jobapplication=[PK of JobApplication]" rel="noopener" target="_blank">Régulariser le n° de sécurité sociale</a>
              </div>
  '''
# ---
# name: ListEmployeeRecordsTest.test_employee_records_with_nir_associated_to_other[alert]
  '''
  <div class="alert alert-warning">
              <div class="row">
                  <div class="col-auto pe-0">
                      <i class="ri-error-warning-line ri-xl text-danger"></i>
                  </div>
                  <div class="col">
                      <p class="mb-0">
                          <strong>Une action de votre part est nécessaire</strong>
                      </p>
                      <p class="mb-0">
                          Attention, nous avons détecté une ou plusieurs fiches salarié qui nécessitent une régularisation manuelle de votre part.
                      </p>
                  </div>
              </div>
          </div>
  '''
# ---
# name: ListEmployeeRecordsTest.test_existing_employee_records_with_a_prolongation_does_not_show_need_to_be_updated_message
  '''
  <div class="c-box--results__footer">
                  <div class="d-flex flex-column flex-md-row justify-content-md-end gap-3">
                      
                          <a aria-label="Désactiver la fiche salarié de John DOE" class="btn btn-outline-primary btn-block w-100 w-md-auto" href="/employee_record/disable/[PK of EmployeeRecord]">Désactiver</a>
                      
                      <a aria-label="Compléter la fiche salarié de John DOE" class="btn btn-primary btn-block w-100 w-md-auto" href="/employee_record/create/[PK of JobApplication]?from_status=NEW">Compléter</a>
                  </div>
              </div>
  '''
# ---
# name: ListEmployeeRecordsTest.test_existing_employee_records_with_a_suspension_does_not_show_need_to_be_updated_message
  '''
  <div class="c-box--results__footer">
                  <div class="d-flex flex-column flex-md-row justify-content-md-end gap-3">
                      
                          <a aria-label="Désactiver la fiche salarié de John DOE" class="btn btn-outline-primary btn-block w-100 w-md-auto" href="/employee_record/disable/[PK of EmployeeRecord]">Désactiver</a>
                      
                      <a aria-label="Compléter la fiche salarié de John DOE" class="btn btn-primary btn-block w-100 w-md-auto" href="/employee_record/create/[PK of JobApplication]?from_status=NEW">Compléter</a>
                  </div>
              </div>
  '''
# ---
